--- a/slab-data-warehouse/webroot/css/default.css
+++ b/slab-data-warehouse/webroot/css/default.css
@@ -3,6 +3,7 @@ html {
   width: 100%;
   height: 100%;
   background-color: #E5E5E5;
+  flex-wrap: wrap;
 }
 
 body {
@@ -10,4 +11,5 @@ body {
   height: 3900px;
   background-image: linear-gradient(180deg, #F6FAFD 0%, #FFFFFF 19.5%);
   overflow-x: scroll;
+  flex-wrap: wrap;
 }
