--- a/slab-data-warehouse/webroot/css/high-level-data-storage.css
+++ b/slab-data-warehouse/webroot/css/high-level-data-storage.css
@@ -13,6 +13,7 @@
   background-size: -95px 500px;
   background-color: rgba(240, 99, 184, 0.15);
   border-radius: 50px;
+  flex-wrap: wrap;
 }
 
 .section-2 header {
